--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "school",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -33,6 +33,7 @@
     "react-share": "^4.4.1",
     "reselect": "^4.1.8",
     "sass": "^1.57.1",
+    "swiper": "^11.0.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
