--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
+    "react-toastify": "^10.0.4",
     "reselect": "^4.1.8",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
